<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/message_welcome_user_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_22dp"
        android:text="@string/welcome_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.space.quizapp.presentation.ui.home.custom_view.GpaVectorView
        android:id="@+id/blueGpaVectorView"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="@dimen/dimen_75dp"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_145dp"
        android:fontFamily="@font/myriad_geo"
        android:text="@string/details"
        android:textColor="@color/neutral_white"
        app:layout_constraintBottom_toBottomOf="@+id/blueGpaVectorView"
        app:layout_constraintEnd_toEndOf="@+id/blueGpaVectorView"
        app:layout_constraintStart_toStartOf="@+id/blueGpaVectorView"
        app:layout_constraintTop_toTopOf="@+id/blueGpaVectorView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gpaTextView"
        style="@style/casual_white_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_28dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/gpa_sample"
        app:layout_constraintStart_toStartOf="@+id/blueGpaVectorView"
        app:layout_constraintTop_toTopOf="@+id/blueGpaVectorView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        style="@style/message_welcome_user_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/choose_subject"
        android:textColor="@color/neutral_dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blueGpaVectorView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/yellow_primary"
        android:contentDescription="@string/exit_logo"
        android:src="@drawable/logout_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/neutral_white" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@drawable/divider_line"
        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
        android:layout_marginBottom="@dimen/dimen_6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startQuizRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/startQuizRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_4dp"
        android:layout_marginEnd="@dimen/dimen_1dp"
        tools:listitem="@layout/item_subject"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

</androidx.constraintlayout.widget.ConstraintLayout>