<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.start.StartFragment">

    <com.space.quizapp.presentation.ui.start.custom_view.StartVectorView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/message_welcome_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_132dp"
            android:layout_marginBottom="48dp"
            android:text="@string/my_first_quiz" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:src="@drawable/start_screen_il" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_54dp"
            android:layout_marginTop="@dimen/dimen_70dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_28dp"
            app:boxCornerRadiusBottomStart="@dimen/dimen_28dp"
            app:boxCornerRadiusTopEnd="@dimen/dimen_28dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_28dp"
            app:boxStrokeColor="@color/yellow_primary"
            app:boxStrokeWidth="@dimen/dimen_2dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUserNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:maxLength="20"
                android:hint="@string/enter_your_name"
                android:maxLines="1"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInButton"
            style="@style/message_welcome_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:backgroundTint="@color/yellow_primary"
            android:ems="10"
            android:text="@string/start_quiz"
            android:textSize="@dimen/dimen_12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
