<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.points.QuizPointsFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/navBackImageButton"
        android:layout_width="@dimen/dimen_32dp"
        android:layout_height="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/navTitleTextView"
        style="@style/casual_text_style_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableEnd="@drawable/ic_star"
        android:drawablePadding="@dimen/dimen_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navBackImageButton"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/earned_points" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scoreRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/dividerView"
        app:layout_constraintTop_toBottomOf="@+id/navTitleTextView"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_subject"
        tools:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notEarnedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_80dp"
        style="@style/casual_text_style_bold"
        android:textStyle="normal"
        android:textSize="@dimen/dimen_18sp"
        android:letterSpacing="0.03"
        android:text="@string/zero_points_warning"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navTitleTextView"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_23dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:backgroundTint="@color/yellow_primary"
        android:contentDescription="@string/exit_logo"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/neutral_white" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:layout_marginBottom="@dimen/dimen_6dp"
        android:background="@drawable/divider_line"
        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>